--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -210,7 +210,6 @@ body {
 
 .index-team-info{
   display: flex;
-
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
@@ -244,6 +243,7 @@ body {
   font-weight: 400;
   line-height: 30px;
   align-self: stretch; /* 150% */
+
 }
 
 .index-team-image-frame{
@@ -467,7 +467,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-background: #28292B;
+  background: #28292B;
 }
 
 .login-right{
@@ -481,8 +481,8 @@ background: #28292B;
   gap: 10px;
   flex-shrink: 0;
   background: #F0F0F0;
-box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
-border-radius: 42px;
+  box-shadow: 13px 0px 12px 0px rgba(0, 0, 0, 0.19);
+  border-radius: 42px;
 }
 
 .login-right-info{
@@ -505,6 +505,8 @@ align-self: stretch;
 
 .login-right-info-title>h1{
   color: #121212;
+  margin-top: 30px;
+  margin-bottom: -25px;
   text-align: center;
   font-size: 45px;
   font-style: normal;
@@ -526,23 +528,23 @@ align-self: stretch;
 
 .login-right-info-input-field{
   width: 390px;
-height: 63px;
-border-radius: 40px;
-background: #D9D9D9;
-display: flex;
-width: 314.683px;
-height: 63px;
-flex-direction: column;
-justify-content: center;
-flex-shrink: 0;
-color: rgba(9, 2, 2, 0.54);
-font-family: "Poppins";
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 130.5%;
-padding-left: 20px;
-padding-right: 10px;
+  height: 63px;
+  border-radius: 40px;
+  background: #D9D9D9;
+  display: flex;
+  width: 314.683px;
+  height: 63px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: rgba(9, 2, 2, 0.54);
+  font-family: "Poppins";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130.5%;
+  padding-left: 20px;
+  padding-right: 10px;
 }
 
 .login-right-info-input-submit{
@@ -574,7 +576,225 @@ padding-right: 10px;
   flex-shrink: 0;
   margin-left: -50px;
   }
+  #login-bg-input{
+    width: 156px;
+    height: 53px;
+    flex-shrink: 0;
+    border-radius: 28px;
+    align-self: center;
+    background: #28292B;
+  }
+/* SIGNUP STLYE*/
+.signup{
+  display: flex;
+  padding: 120px 120px 120px 122px;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  background: radial-gradient(72.03% 28.63% at 107.79% 54.29%, rgba(144, 193, 183, 0.73) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(60.88% 44.36% at 10.08% 65.85%, rgba(89, 141, 89, 0.34) 0%, rgba(0, 0, 0, 0.00) 100%), #28292B;
+}
 
+.signup-items{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signup-items-left{
+  display: flex;
+  width: 675px;
+  height: 551px;
+  padding: 167px 0px 138px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  background: #F0F0F0;
+  padding-right:-30px;
+  margin-right:-40px;
+  border-radius: 42px;
+  }
+
+.signup-items-left-info{
+  display: flex;
+width: 542px;
+height: 525px;
+padding-top: 1px;
+flex-direction: column;
+align-items: flex-start;
+gap: 41px;
+flex-shrink: 0;
+margin-left: -40px;
+}
+
+.signup-items-left-info-title{
+  display: flex;
+width: 538px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 20px;
+margin-left: 20px;
+}
+
+.signup-items-left-info-title>h1{
+  color: #121212;
+font-family: "CocoSharp Trial";
+font-size: 45px;
+font-style: normal;
+font-weight: 800;
+line-height: 130.5%; /* 58.725px */
+letter-spacing: -0.45px;
+width: 534px;
+height: 110px;
+}
+
+.signup-items-left-info-input-frame{
+  display: flex;
+width: 549px;
+height: 225px;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+}
+
+.signup-items-left-info-input-frame-one{
+  display: flex;
+  width: 553px;
+  height: 65px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 17px;
+  flex-shrink: 0;
+}
+
+
+.signup-items-left-info-input-frame-two{
+  display: flex;
+  width: 549px;
+  height: 66px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 16px;
+  flex-shrink: 0;
+}
+
+.signup-items-left-info-input-frame-three{
+  display: flex;
+  width: 549px;
+  height: 66px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 16px;
+  flex-shrink: 0;
+}
+
+.signup-left-info-input-field{
+  display: flex;
+  width: 3590px;
+  height: 63px;
+  border-radius: 40px;
+  background: #D9D9D9;
+  display: flex;
+  width: 250.683px;
+  height: 50px;
+  justify-content: center;
+  flex-shrink: 0;
+  color: rgba(9, 2, 2, 0.54);
+  font-family: "Poppins";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130.5%;
+  padding-left: 15px;
+  padding-right: 10px;
+
+}
+
+.signup-left-info-input-store{
+  display: flex;
+  width: 390px;
+  height: 63px;
+  border-radius: 40px;
+  background: #D9D9D9;
+  display: flex;
+  width: 200.683px;
+  height: 50px;
+  justify-content: center;
+  flex-shrink: 0;
+  color: rgba(9, 2, 2, 0.54);
+  font-family: "Poppins";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130.5%;
+  padding-left:10px;
+  appearance: none;
+
+}
+
+.signup-left-info-input-branch{
+  display: flex;
+  width: 490px;
+  height: 63px;
+  border-radius: 40px;
+  background: #D9D9D9;
+  display: flex;
+  width: 300.683px;
+  height: 50px;
+  justify-content: center;
+  flex-shrink: 0;
+  color: rgba(9, 2, 2, 0.54);
+  font-family: "Poppins";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130.5%;
+  padding-left:15px;
+  appearance: none;
+}
+
+.signup-items-left-info-input-frame-footer{
+  display: flex;
+  margin-top: 40px;
+  height: 74px;
+  padding-top: 9px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  flex-shrink: 0;
+  align-self: stretch;
+}
+
+#signup-bg-input{
+  width: 156px;
+  height: 53px;
+  flex-shrink: 0;
+  border-radius: 28px;
+  align-self: center;
+  background: #28292B;
+}
+
+.signup-items{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+
+.signup-items-right{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 10px;
+  flex-shrink: 0;
+
+  }
   
 /* FOOTER STLYE*/
 .footer{
