--- a/marketwiz/src/App.css
+++ b/marketwiz/src/App.css
@@ -1196,8 +1196,9 @@ flex-shrink: 0;
   width: 196px;
   height: 64px;
   flex-direction: column;
-  justify-content: center;
   flex-shrink: 0;
+  text-align: right;
+  justify-content: center;
   }
   
   
